# setup

./: .gitmodules  README.md
dotfiles/: .p10k.zsh  .vimrc  .zshrc  install.sh
dotfiles/vscode/: settings.json
templates/: .dockerignore  .gitignore  .gitmessage  .markdownlint.json  .pre-commit-config.yaml  .yamllint  commitlint.config.js  init-project.sh  pyproject.toml
